docker compose running

--- a/my-react-app/Dockerfile
+++ b/my-react-app/Dockerfile
@@ -7,7 +7,7 @@ COPY package.json .
 
 RUN npm install
 
-#replaced here
+#replaced here, has to be in docker compose: https://stackoverflow.com/questions/47942016/add-bind-mount-to-dockerfile-just-like-volume
 RUN --mount=type=bind,source=.,target=. ls -al
 #COPY . .
 
